update prettier settings

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Notification</title>
+    <title>@tickify/ngx-notification</title>
     <link rel="preload" href="https://unpkg.com/@atlassian/aui@7.8.1/dist/aui/css/fonts/adgs-icons.woff" as="font">
     <link rel="preload" href="https://unpkg.com/@atlassian/aui@7.8.1/dist/aui/css/fonts/adgs-icons.ttf" as="font">
     <link rel="preload" href="https://unpkg.com/@atlassian/aui@7.8.1/dist/aui/css/fonts/adgs-icons.eot" as="font">
